syntax = "proto3";

package machine.service.v1;

option go_package = "api/machine/service/v1;v1";

// 以下服务运行在后端，接收机器的每一个动作的执行结果
service Response {
  rpc MoveDone (MoveDoneRequest) returns (MoveDoneReply) {};
}

// 执行完成，发送当前坐标到后端
message MoveDoneRequest {
  double x = 1;     // x
  double y = 2;     // y
  double z = 3;     // z
  double rx = 4;    // 绕 x 角度
  double ry = 5;    // 绕 y 角度
  bool check = 6;   // 是否为检查动作
  double delay = 7; // 每个动作的延时
  string uuid = 8;  // 设备的唯一识别码
  string check_name = 9; // 检查动作名称
}

// 响应
message MoveDoneReply {
  bool status = 1;
}